XXXXXXXX
========
- Script added to make backups. It can be launched from console and from UI.

20130114
========
- Documents are now generated in /tmp/didyoureadme
- Open documents and reports have been improved
- You can add several lines in document comment
- The title of the document is now mandatory


20130108
========
- First version, full functional.